--- a/session1_organisation/materiel/organisation_session_solution_exercices.html
+++ b/session1_organisation/materiel/organisation_session_solution_exercices.html
@@ -396,7 +396,7 @@ summary {
 <p>date2_geneXY_15c25c_col0_ler1_rep1.txt date2_geneXY_15c25c_col0_ler1_rep2.txt date2_geneXY_15c25c_col0_ler1_rep3.txt</p>
 <p>date&quot;_geneXY_15c25c_col0_ler1_rep1.txt date3_geneXY_15c25c_col0_ler1_rep2.txt date3_geneXY_15c25c_col0_ler1_rep3.txt</p>
 <p>(en remplaçant date1, date2 et date3 par la vrai date de l’expérience)</p>
-<p>Ou peut être même que vous avez tous vos réplicat ensemble et vous avez un fichier par date:</p>
+<p>Ou peut être même que vous avez tous vos réplicats ensemble et vous avez un fichier par date:</p>
 <p>date1_geneXY_15c25c_col0_ler1_rep1_2_3.txt date2_geneXY_15c25c_col0_ler1_rep1_2_3.txt date3_geneXY_15c25c_col0_ler1_rep1_2_3.txt</p>
 <p>Ou alors vous avez un fichier par gène/température/accession/réplicat et date. Dans ce cas vous aurez beaucoup de fichier du type (uniquement les premiers sont indiqués):</p>
 <p>date1_geneX_15c_col0_rep1.txt date1_geneY_15c_col0_rep1.txt date1_geneX_25c_col0_rep1.txt date1_geneX_15c_ler1_rep1.txt etc…</p>
