--- a/session4_reorganisation_suite/materiel/reorganisation_suite_solution_exercices.html
+++ b/session4_reorganisation_suite/materiel/reorganisation_suite_solution_exercices.html
@@ -390,7 +390,7 @@ summary {
 <pre class="r"><code>filter(expt1,  background!=&quot;Ler&quot; &amp; fluctuation==&quot;Var&quot;) %&gt;% 
   select(genotype, blade.length.mm, contains(&quot;bolt&quot;))</code></pre>
 <pre><code>## # A tibble: 389 x 5
-##    genotype blade.length.mm survival.bolt bolt  days.to.bolt
+##    genotype blade.length.mm bolt.survival bolt  days.to.bolt
 ##    &lt;chr&gt;              &lt;dbl&gt; &lt;chr&gt;         &lt;chr&gt;        &lt;dbl&gt;
 ##  1 Col Ama             15.1 Y             Y               32
 ##  2 Col Ama             16   Y             Y               32
@@ -403,6 +403,55 @@ summary {
 ##  9 Col Ama             29.7 Y             Y               68
 ## 10 Col Ama             22.1 Y             Y               68
 ## # … with 379 more rows</code></pre>
+<p><br></p>
+<blockquote>
+<p><strong>BONUS</strong>: Transformez l’enchainement de commandes afin d’utiliser des pipes <code>%&gt;%</code> plutôt que objets intermédiaires</p>
+</blockquote>
+<pre class="r"><code>expt1 &lt;- read_tsv(&quot;../data/burghardt_et_al_2015_expt1.txt&quot;)
+
+expt1_filtered &lt;- filter(expt1, fluctuation==&quot;Con&quot; &amp; day.length==&quot;16&quot;)
+
+expt1_selected &lt;- select(expt1_filtered,days.to.bolt:total.leaf.length.mm)
+
+summary(expt1_selected)</code></pre>
+<pre><code>##   days.to.bolt    days.to.flower  rosette.leaf.num cauline.leaf.num
+##  Min.   : 15.00   Min.   : 21.0   Min.   : 6.00    Min.   : 1.000  
+##  1st Qu.: 26.75   1st Qu.: 39.0   1st Qu.:14.00    1st Qu.: 4.000  
+##  Median : 41.50   Median : 49.0   Median :30.00    Median : 7.000  
+##  Mean   : 45.00   Mean   : 53.6   Mean   :31.67    Mean   : 6.827  
+##  3rd Qu.: 57.00   3rd Qu.: 70.0   3rd Qu.:46.00    3rd Qu.: 9.000  
+##  Max.   :152.00   Max.   :135.0   Max.   :91.00    Max.   :13.000  
+##                   NA's   :7       NA's   :9        NA's   :9       
+##  blade.length.mm total.leaf.length.mm
+##  Min.   : 8.20   Min.   :10.90       
+##  1st Qu.:14.45   1st Qu.:22.12       
+##  Median :19.20   Median :30.50       
+##  Mean   :18.39   Mean   :29.01       
+##  3rd Qu.:21.57   3rd Qu.:34.52       
+##  Max.   :28.20   Max.   :47.00       
+##  NA's   :78      NA's   :62</code></pre>
+<p><br></p>
+<p>Solution:</p>
+<pre class="r"><code>read_tsv(&quot;../data/burghardt_et_al_2015_expt1.txt&quot;) %&gt;% 
+  filter(fluctuation==&quot;Con&quot; &amp; day.length==&quot;16&quot;) %&gt;% 
+  select(days.to.bolt:total.leaf.length.mm) %&gt;% 
+  summary()</code></pre>
+<pre><code>##   days.to.bolt    days.to.flower  rosette.leaf.num cauline.leaf.num
+##  Min.   : 15.00   Min.   : 21.0   Min.   : 6.00    Min.   : 1.000  
+##  1st Qu.: 26.75   1st Qu.: 39.0   1st Qu.:14.00    1st Qu.: 4.000  
+##  Median : 41.50   Median : 49.0   Median :30.00    Median : 7.000  
+##  Mean   : 45.00   Mean   : 53.6   Mean   :31.67    Mean   : 6.827  
+##  3rd Qu.: 57.00   3rd Qu.: 70.0   3rd Qu.:46.00    3rd Qu.: 9.000  
+##  Max.   :152.00   Max.   :135.0   Max.   :91.00    Max.   :13.000  
+##                   NA's   :7       NA's   :9        NA's   :9       
+##  blade.length.mm total.leaf.length.mm
+##  Min.   : 8.20   Min.   :10.90       
+##  1st Qu.:14.45   1st Qu.:22.12       
+##  Median :19.20   Median :30.50       
+##  Mean   :18.39   Mean   :29.01       
+##  3rd Qu.:21.57   3rd Qu.:34.52       
+##  Max.   :28.20   Max.   :47.00       
+##  NA's   :78      NA's   :62</code></pre>
 <p><br></p>
 <hr />
 <blockquote>
@@ -431,7 +480,7 @@ summary {
 <hr />
 <blockquote>
 <p><strong>Exercice 3:</strong></p>
-<p>Créez une nouvelle colonne (blade.ratio) avec le ratio de <code>blade.length.mm</code> et <code>total.leaf.length.mm</code></p>
+<p>Créez une nouvelle colonne “blade.ratio” avec le ratio de <code>blade.length.mm</code> et <code>total.leaf.length.mm</code></p>
 </blockquote>
 <pre class="r"><code>mutate(expt1, blade.ratio=blade.length.mm/total.leaf.length.mm)</code></pre>
 <pre><code>## # A tibble: 957 x 16
@@ -447,10 +496,36 @@ summary {
 ##  8        8 Col Ama  Col                 12 Con                 16 NV           
 ##  9        1 Col Ama  Col                 12 Con                  8 NV           
 ## 10        2 Col Ama  Col                 12 Con                  8 NV           
-## # … with 947 more rows, and 9 more variables: survival.bolt &lt;chr&gt;, bolt &lt;chr&gt;,
+## # … with 947 more rows, and 9 more variables: bolt.survival &lt;chr&gt;, bolt &lt;chr&gt;,
 ## #   days.to.bolt &lt;dbl&gt;, days.to.flower &lt;dbl&gt;, rosette.leaf.num &lt;dbl&gt;,
 ## #   cauline.leaf.num &lt;dbl&gt;, blade.length.mm &lt;dbl&gt;, total.leaf.length.mm &lt;dbl&gt;,
 ## #   blade.ratio &lt;dbl&gt;</code></pre>
+<blockquote>
+<p><strong>BONUS:</strong><br />
+Créez une nouvelle colonne “late.flowering” qui contient <code>TRUE</code> si days.to.bolt est supérieur à 70, et <code>FALSE</code> days.to.bolt est inférieur à 70.<br />
+<em>Aide</em>: Trouvez la solution en utilisant google</p>
+</blockquote>
+<pre class="r"><code># En tapant &quot;mutate tidyverse create new column depending on value other column&quot; dasn google, le 1er site (https://www.marsja.se/r-add-column-to-dataframe-based-on-other-columns-conditions-dplyr/) propose plusieurs solutions pour créer une colonne en fonction des valeurs d'une autre colonne. Voici l'une d'elles qui utilise la fonction mutate():
+
+mutate(expt1, late.flowering=if_else(condition = days.to.bolt&gt;70, TRUE, FALSE))</code></pre>
+<pre><code>## # A tibble: 957 x 16
+##    plant_nb genotype background temperature fluctuation day.length vernalization
+##       &lt;dbl&gt; &lt;chr&gt;    &lt;chr&gt;            &lt;dbl&gt; &lt;chr&gt;            &lt;dbl&gt; &lt;chr&gt;        
+##  1        1 Col Ama  Col                 12 Con                 16 NV           
+##  2        2 Col Ama  Col                 12 Con                 16 NV           
+##  3        3 Col Ama  Col                 12 Con                 16 NV           
+##  4        4 Col Ama  Col                 12 Con                 16 NV           
+##  5        5 Col Ama  Col                 12 Con                 16 NV           
+##  6        6 Col Ama  Col                 12 Con                 16 NV           
+##  7        7 Col Ama  Col                 12 Con                 16 NV           
+##  8        8 Col Ama  Col                 12 Con                 16 NV           
+##  9        1 Col Ama  Col                 12 Con                  8 NV           
+## 10        2 Col Ama  Col                 12 Con                  8 NV           
+## # … with 947 more rows, and 9 more variables: bolt.survival &lt;chr&gt;, bolt &lt;chr&gt;,
+## #   days.to.bolt &lt;dbl&gt;, days.to.flower &lt;dbl&gt;, rosette.leaf.num &lt;dbl&gt;,
+## #   cauline.leaf.num &lt;dbl&gt;, blade.length.mm &lt;dbl&gt;, total.leaf.length.mm &lt;dbl&gt;,
+## #   late.flowering &lt;lgl&gt;</code></pre>
+<p>mutate(C = if_else(A == B, “Equal”, “Not Equal”))</p>
 <p><br></p>
 <hr />
 <blockquote>
