Bonus exercise seance 5

--- a/session5_reorganisation_avancee/materiel/reorganisation_avancee.html
+++ b/session5_reorganisation_avancee/materiel/reorganisation_avancee.html
@@ -1803,6 +1803,12 @@ summarise(n.obs = n())</code></pre>
 <p><strong>Exercice 2:</strong></p>
 <p>Calculez la médiane et l’écart-type de <code>blade.length.mm</code> et <code>total.leaf.length.mm</code> pour chaque <code>genotype</code> aux différentes <code>day.length</code>. Ajoutez aussi le nombre d’observations de chaque groupe</p>
 </blockquote>
+<blockquote>
+<p><strong>BONUS</strong><br />
+Calculez chaque <code>genotype</code> en fonction de s’ils ont subit ou non une <code>vernalization</code>: La moyenne du ratio de <code>blade.length.mm</code> et <code>total.leaf.length.mm</code><br />
+Le nombre d’observation de chaque groupe<br />
+Modifiez la colonne qui contient le nombre d’observations de manière à ajouter “n=” devant la valeur du nombre d’observations</p>
+</blockquote>
 <p><br></p>
 </div>
 <div id="faire-un-graphique-avec-les-statistiques-descriptives" class="section level2">
