--- a/session1_organisation/materiel/Devoir_seance1.html
+++ b/session1_organisation/materiel/Devoir_seance1.html
@@ -1546,6 +1546,11 @@ div.tocify {
 <p><em>Aide: le fichier est au format <code>.txt</code> avec les colonnes séparées par une tabulation.</em></p>
 <p><br></p>
 <p>Vous pouvez trouver plus d’information sur le jeu de données dans cet article de <a href="https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0189791">Pan et al., 2017</a>. Dans le fichier la colonne <code>Genotype</code> contient le nom des accessions d’Arabidopsis utilisées. La colonne <code>Treatment</code> indique si les plantes ont été traitées avec le champignon <em>Piriformospora indica</em>. La colonne <code>Flowering_time_days</code> indique le nombre de jours pour que les plantes arrivent à floraison. Quinze plantes ont été mesurées pour chaque traitement sur chaque génotype.</p>
+<p><br></p>
+<ul>
+<li>C’est fini. N’oubliez pas de sauver votre fichier que vous réutiliserez pour le reste du contrôle continu.</li>
+</ul>
+<p><br></p>
 
 
 
