--- a/session3_stats_reorganisation/materiel/Devoir_seance3.html
+++ b/session3_stats_reorganisation/materiel/Devoir_seance3.html
@@ -1538,9 +1538,15 @@ div.tocify {
 </ul>
 <p><br></p>
 <ul>
-<li><p>Select</p></li>
-<li><p>Filter</p></li>
+<li>Avec l’une des fonctions que nous avons vu dans la deuxième partie du cours, selectionnez toutes les colonnes de l’objet <code>flowering_data</code> sauf la colonne <code>Plant</code>.</li>
 </ul>
+<p><br></p>
+<ul>
+<li>Avec une autre fonction que nous avons vu dans la deuxième partie du cours, gardez uniquement les lignes de l’objet <code>flowering_data</code> qui sont du <code>Genotype</code> <code>Ler</code>.</li>
+</ul>
+<p><br></p>
+<p><strong>C’est fini. N’oubliez pas de sauver votre fichier. Le script contenant tous les exercices à faire entre les séances 1, 2 et 3 est la première moitié du contrôle continue et doit être déposé sur Moodle au plus tard le xxx.</strong></p>
+<p><br></p>
 
 
 
