--- a/session2_ggplot/materiel/Devoir_seance2.html
+++ b/session2_ggplot/materiel/Devoir_seance2.html
@@ -1535,7 +1535,7 @@ div.tocify {
 </ul>
 <p><br></p>
 <ul>
-<li>Effectuez un boxplot du temps de <code>Flowering_time_days</code> (axe y), en fonction du <code>Genotype</code> (axe x), avec les boxplots colorés en fonction de <code>Treatment</code></li>
+<li>Effectuez un boxplot du temps de <code>Flowering_time_days</code> (axe y), en fonction du <code>Genotype</code> (axe x), avec l’intérieur des boxplots colorés en fonction de <code>Treatment</code></li>
 </ul>
 <p><br></p>
 <ul>
