--- a/session1_organisation/materiel/intro_R.html
+++ b/session1_organisation/materiel/intro_R.html
@@ -1693,6 +1693,7 @@ setwd(&quot;C:/Users/sandra/Desktop/2021_L3_R/session1_organisation/&quot;)</cod
 </ul>
 <p><strong>Conseil:</strong> Si besoin consultez la page d’aide des fonctions en utilisant <code>?</code> (par exemple <code>?library()</code> pour consulter la page d’aide de la fonction <code>library()</code>)</p>
 </blockquote>
+<p><br></p>
 </div>
 </div>
 <div id="ressources-et-liens-utiles" class="section level1">
@@ -1700,18 +1701,24 @@ setwd(&quot;C:/Users/sandra/Desktop/2021_L3_R/session1_organisation/&quot;)</cod
 <ul>
 <li><a href="http://readr.tidyverse.org/">Les fonctions pour importer les différents formats dans R</a></li>
 </ul>
+<p><br></p>
 <hr />
 </div>
 <div id="a-faire-pour-la-prochaine-séance" class="section level1">
 <h1><span style="color: blue;">A faire pour la prochaine séance </span></h1>
-<p>A partir de ce que nous avons vu aujourd’hui:</p>
-<ul>
-<li><p>Installez R et Rstudio sur votre ordinateur (<a href="https://cran.biotools.fr/">Installer R</a>, <a href="https://rstudio.com/products/rstudio/download/">Installer Rstudio</a>)</p></li>
-<li><p>Commencez le contrôle continu dont les instructions sont <a href="Devoir_seance1.html">ici</a></p></li>
-</ul>
+<div id="a-partir-de-ce-que-nous-avons-vu-aujourdhui" class="section level4">
+<h4>A partir de ce que nous avons vu aujourd’hui:</h4>
+</div>
+<div id="installez-r-et-rstudio-sur-votre-ordinateur-installer-r-installer-rstudio" class="section level4">
+<h4>- Installez R et Rstudio sur votre ordinateur (<a href="https://cran.biotools.fr/">Installer R</a>, <a href="https://rstudio.com/products/rstudio/download/">Installer Rstudio</a>)</h4>
+</div>
+<div id="commencez-le-contrôle-continu-dont-les-instructions-sont-ici" class="section level4">
+<h4>- Commencez le contrôle continu dont les instructions sont <a href="Devoir_seance1.html">ici</a></h4>
+<p><br></p>
 <hr />
 <p><a href="https://scortijo.github.io/2022_L3_R/">Retour à la page d’accueil</a></p>
 <hr />
+</div>
 </div>
 
 
