--- a/session3_stats_reorganisation/materiel/Devoir_seance3.html
+++ b/session3_stats_reorganisation/materiel/Devoir_seance3.html
@@ -1534,18 +1534,20 @@ div.tocify {
 </ul>
 <p><br></p>
 <ul>
-<li>Ajoutez au boxplot (qui est à la fin de votre script) le résultat d’un test de comparaison de moyennes entre les deux traitements. Formulez une interprêtation à propos de l’effet du champignon <em>Piriformospora indica</em> sur le temps de floraison d’Arabidopsis.</li>
+<li>Ajoutez au boxplot (qui est à la fin de votre script) le résultat d’un test de comparaison de moyennes entre les deux niveaux d’azote pour chacune des accessions. <em>Aide: pour faciliter la lecture du résultat du test, utiliez <code>label = &quot;p.signif&quot;</code> afin de ne faire apparaitre que les étoiles de significativité du test pour chaque accession.</em> Formulez une interprétation à propos de l’effet du la concentration en azote sur le poids des plantes d’Arabidopsis.</li>
 </ul>
 <p><br></p>
 <ul>
-<li>Avec l’une des fonctions que nous avons vue dans la deuxième partie du cours, selectionnez toutes les colonnes de l’objet <code>flowering_data</code> sauf la colonne <code>Plant</code>.</li>
+<li>Avec l’une des fonctions que nous avons vue dans la deuxième partie du cours, selectionnez toutes les colonnes de l’objet <code>nitrate_data</code> sauf la colonne <code>Nlevel</code>.</li>
 </ul>
 <p><br></p>
 <ul>
-<li>Avec une autre fonction que nous avons vue dans la deuxième partie du cours, gardez uniquement les lignes de l’objet <code>flowering_data</code> qui sont du <code>Genotype</code> <code>Ler</code>.</li>
+<li>Avec une autre fonction que nous avons vue dans la deuxième partie du cours, gardez uniquement les lignes de l’objet <code>nitrate_data</code> qui sont l’accession <code>Col-0</code>.</li>
 </ul>
 <p><br></p>
-<p><strong>C’est fini. N’oubliez pas de sauver votre fichier. Le script contenant tous les exercices à faire entre les séances 1, 2 et 3 est la première moitié du contrôle continu et doit être déposé sur Moodle au plus tard le 09/11/2022 à minuit.</strong></p>
+<ul>
+<li><strong>C’est fini. N’oubliez pas de sauver votre fichier. Le script contenant tous les exercices à faire entre les séances 1, 2 et 3 est la première moitié du contrôle continu et doit être déposé sur Moodle au plus tard le 09/11/2022 à minuit.</strong></li>
+</ul>
 <p><br></p>
 
 
