--- a/session1_organisation/materiel/intro_R.html
+++ b/session1_organisation/materiel/intro_R.html
@@ -1704,8 +1704,8 @@ setwd(&quot;C:/Users/sandra/Desktop/2021_L3_R/session1_organisation/&quot;)</cod
 <p><br></p>
 <hr />
 </div>
-<div id="a-faire-pour-la-prochaine-séance" class="section level1">
-<h1><span style="color: blue;">A faire pour la prochaine séance </span></h1>
+<div id="contrôle-continu-à-faire-pour-la-prochaine-séance" class="section level1">
+<h1><span style="color: blue;"> Contrôle continu à faire pour la prochaine séance </span></h1>
 <div id="a-partir-de-ce-que-nous-avons-vu-aujourdhui" class="section level4">
 <h4>A partir de ce que nous avons vu aujourd’hui:</h4>
 </div>
