--- a/session3_stats_reorganisation/materiel/Devoir_seance3.html
+++ b/session3_stats_reorganisation/materiel/Devoir_seance3.html
@@ -1534,8 +1534,10 @@ div.tocify {
 </ul>
 <p><br></p>
 <ul>
-<li>Ajoutez au boxplot (qui est à la fin de votre script) le résultat d’un test de comparaison de moyennes entre les deux niveaux d’azote pour chacune des accessions. <em>Aide: pour faciliter la lecture du résultat du test, utiliez <code>label = &quot;p.signif&quot;</code> afin de ne faire apparaitre que les étoiles de significativité du test pour chaque accession.</em> Formulez une interprétation à propos de l’effet du la concentration en azote sur le poids des plantes d’Arabidopsis.</li>
+<li>Ajoutez au boxplot (qui est à la fin de votre script) le résultat d’un test de comparaison de moyennes entre les deux niveaux d’azote pour chacune des accessions.<br />
+<em>Aide: pour faciliter la lecture du résultat du test, utiliez <code>label = &quot;p.signif&quot;</code> afin de ne faire apparaitre que les étoiles de significativité du test pour chaque accession.</em></li>
 </ul>
+<p>Formulez une interprétation à propos de l’effet du la concentration en azote sur le poids des plantes d’Arabidopsis.</p>
 <p><br></p>
 <ul>
 <li>Avec l’une des fonctions que nous avons vue dans la deuxième partie du cours, selectionnez toutes les colonnes de l’objet <code>nitrate_data</code> sauf la colonne <code>Nlevel</code>.</li>
