--- a/session1_organisation/materiel/intro_R.html
+++ b/session1_organisation/materiel/intro_R.html
@@ -1689,7 +1689,7 @@ setwd(&quot;C:/Users/sandra/Desktop/2021_L3_R/session1_organisation/&quot;)</cod
 <ul>
 <li>Charge le package <code>tidyverse</code> (en utilisant <code>library()</code>)</li>
 <li>Défini votre répertoire de travail dans le dossier <code>session1_organisations</code> (en utilisant <code>setwd()</code>)</li>
-<li>Importe le fichier <em>dataset_tidy_all.txt</em> qui est dans le dossier <em>data</em> (en utilisant <code>read_csv()</code>)</li>
+<li>Importe le fichier <em>dataset_tidy_all.txt</em> qui est dans le dossier <em>data</em> (en utilisant <code>read_tsv()</code>)</li>
 </ul>
 <p><strong>Conseil:</strong> Si besoin consultez la page d’aide des fonctions en utilisant <code>?</code> (par exemple <code>?library()</code> pour consulter la page d’aide de la fonction <code>library()</code>)</p>
 </blockquote>
